--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vionikoai",
+  "name": "client",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,11 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@next/font": "13.2.4",
-    "eslint": "8.37.0",
-    "eslint-config-next": "13.2.4",
-    "next": "13.2.4",
+    "@formkit/auto-animate": "^1.0.0-beta.6",
+    "@next/font": "13.1.6",
+    "@paypal/react-paypal-js": "^7.8.2",
+    "eslint": "8.33.0",
+    "eslint-config-next": "13.1.6",
+    "firebase": "^9.17.1",
+    "formkit": "^1.0.0-beta.15",
+    "next": "13.1.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-copy-to-clipboard": "^5.1.0",
+    "react-dom": "18.2.0",
+    "react-query": "^3.39.3",
+    "react-table": "^7.8.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.4"
   }
 }
