--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.12.0",
     "@next/font": "13.1.6",
     "@paypal/react-paypal-js": "^7.8.2",
+    "@stripe/stripe-js": "^1.52.1",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "firebase": "^9.17.1",
@@ -24,6 +25,7 @@
     "react": "18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.2.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-query": "^3.39.3",
     "react-table": "^7.8.0"
   },
