--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@next/font": "13.1.6",
     "@paypal/react-paypal-js": "^7.8.2",
     "@stripe/stripe-js": "^1.52.1",
+    "axios": "^1.3.6",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "firebase": "^9.17.1",
