--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.6.1",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@formkit/auto-animate": "^1.0.0-beta.6",
@@ -28,7 +29,8 @@
     "react-dom": "18.2.0",
     "react-firebase-hooks": "^5.1.1",
     "react-query": "^3.39.3",
-    "react-table": "^7.8.0"
+    "react-table": "^7.8.0",
+    "use-debounce": "^9.0.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
