--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "formkit": "^1.0.0-beta.15",
     "next": "13.1.6",
     "react": "18.2.0",
+    "react-avatar": "^5.0.3",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.2.0",
     "react-firebase-hooks": "^5.1.1",
