--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-firebase-hooks": "^5.1.1",
     "react-query": "^3.39.3",
     "react-table": "^7.8.0",
+    "react-toastify": "^9.1.3",
     "use-debounce": "^9.0.4"
   },
   "devDependencies": {
