--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@chakra-ui/react": "^2.6.1",
+    "@dqbd/tiktoken": "^1.0.2",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@formkit/auto-animate": "^1.0.0-beta.6",
@@ -22,15 +23,14 @@
     "@paypal/react-paypal-js": "^7.8.2",
     "@stripe/stripe-js": "^1.52.1",
     "@tabler/icons-react": "^2.22.0",
-    "@dqbd/tiktoken": "^1.0.2",
-    "eventsource-parser": "^0.1.0",
-    "openai": "^3.2.1",
     "axios": "^1.3.6",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
+    "eventsource-parser": "^0.1.0",
     "firebase": "^9.17.1",
     "formkit": "^1.0.0-beta.15",
     "next": "13.1.6",
+    "openai": "^3.2.1",
     "react": "18.2.0",
     "react-avatar": "^5.0.3",
     "react-copy-to-clipboard": "^5.1.0",
@@ -49,10 +49,6 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.13",
-    "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.4",
-    "vitest": "^0.29.7",
     "@mozilla/readability": "^0.4.4",
     "@tailwindcss/typography": "^0.5.9",
     "@trivago/prettier-plugin-sort-imports": "^4.1.1",
@@ -63,11 +59,15 @@
     "@types/react-syntax-highlighter": "^15.5.6",
     "@types/uuid": "^9.0.1",
     "@vitest/coverage-c8": "^0.29.7",
+    "autoprefixer": "^10.4.13",
     "endent": "^2.1.0",
     "gpt-3-encoder": "^1.1.4",
     "jsdom": "^21.1.1",
+    "postcss": "^8.4.21",
     "prettier": "^2.8.7",
     "prettier-plugin-tailwindcss": "^0.2.5",
-    "typescript": "4.9.5"
+    "tailwindcss": "^3.2.4",
+    "typescript": "4.9.5",
+    "vitest": "^0.29.7"
   }
 }
