--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "prettier --write .",
+    "test": "vitest",
+    "coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@chakra-ui/react": "^2.6.1",
+    "@dqbd/tiktoken": "^1.0.2",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@formkit/auto-animate": "^1.0.0-beta.6",
@@ -18,21 +22,25 @@
     "@next/font": "13.1.6",
     "@paypal/react-paypal-js": "^7.8.2",
     "@stripe/stripe-js": "^1.52.1",
-    "@tabler/icons-react": "^2.22.0",
+    "@tabler/icons-react": "^2.9.0",
     "axios": "^1.3.6",
-    "eslint": "8.33.0",
-    "eslint-config-next": "13.1.6",
+    "eslint": "8.36.0",
+    "eslint-config-next": "13.2.4",
+    "eventsource-parser": "^0.1.0",
     "firebase": "^9.17.1",
     "formkit": "^1.0.0-beta.15",
-    "next": "13.1.6",
-    "next-i18next": "^14.0.0",
+    "i18next": "^22.4.13",
+    "next": "13.2.4",
+    "next-i18next": "^13.2.2",
+    "openai": "^3.2.1",
     "react": "18.2.0",
     "react-avatar": "^5.0.3",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.2.0",
     "react-firebase-hooks": "^5.1.1",
-    "react-hot-toast": "^2.4.1",
-    "react-markdown": "^8.0.7",
+    "react-hot-toast": "^2.4.0",
+    "react-i18next": "^12.2.0",
+    "react-markdown": "^8.0.5",
     "react-query": "^3.39.3",
     "react-syntax-highlighter": "^15.5.0",
     "react-table": "^7.8.0",
@@ -44,8 +52,33 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.13",
+    "autoprefixer": "^10.4.14",
+    "@mozilla/readability": "^0.4.4",
+    "@tailwindcss/typography": "^0.5.9",
+    "@trivago/prettier-plugin-sort-imports": "^4.1.1",
+    "@types/jsdom": "^21.1.1",
+    "@types/node": "18.15.0",
+    "@types/react": "18.0.28",
+    "@types/react-dom": "18.0.11",
+    "@types/react-syntax-highlighter": "^15.5.6",
+    "@types/uuid": "^9.0.1",
+    "@vitest/coverage-c8": "^0.29.7",
+    "@typescript-eslint/eslint-plugin": "^5.10.0",
+    "@typescript-eslint/parser": "^5.10.0",
+    "endent": "^2.1.0",
+    "eslint": "^8.6.0",
+    "eslint-config-next": "^12.0.4",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "gpt-3-encoder": "^1.1.4",
+    "jsdom": "^21.1.1",
     "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.4"
+    "prettier": "^2.8.7",
+    "prettier-plugin-tailwindcss": "^0.2.5",
+    "tailwindcss": "^3.2.7",
+    "typescript": "^4.9.5",
+    "vitest": "^0.29.7"
   }
 }
