--- a/package.json
+++ b/package.json
@@ -24,15 +24,14 @@
     "@stripe/stripe-js": "^1.52.1",
     "@tabler/icons-react": "^2.9.0",
     "axios": "^1.3.6",
+    "classnames": "^2.3.2",
     "eslint": "8.33.0",
-    "react-icons": "^4.9.0",
     "eslint-config-next": "13.1.6",
     "eventsource-parser": "^0.1.0",
     "firebase": "^9.17.1",
     "formkit": "^1.0.0-beta.15",
     "next": "13.1.6",
     "next-i18next": "^13.2.2",
-    "classnames": "^2.3.2",
     "openai": "^3.2.1",
     "react": "18.2.0",
     "react-avatar": "^5.0.3",
@@ -41,6 +40,7 @@
     "react-firebase-hooks": "^5.1.1",
     "react-hot-toast": "^2.4.0",
     "react-i18next": "^12.2.0",
+    "react-icons": "^4.9.0",
     "react-markdown": "^8.0.5",
     "react-query": "^3.39.3",
     "react-syntax-highlighter": "^15.5.0",
@@ -49,6 +49,7 @@
     "rehype-mathjax": "^4.0.2",
     "remark-gfm": "^3.0.1",
     "remark-math": "^5.1.1",
+    "sharp": "^0.32.1",
     "use-debounce": "^9.0.4",
     "uuid": "^9.0.0"
   },
