--- a/package.json
+++ b/package.json
@@ -21,9 +21,20 @@
     "@mui/material": "^5.12.0",
     "@next/font": "13.1.6",
     "@paypal/react-paypal-js": "^7.8.2",
+    "@radix-ui/react-alert-dialog": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.4",
+    "@radix-ui/react-dropdown-menu": "^2.0.5",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-select": "^1.2.2",
+    "@radix-ui/react-separator": "^1.0.3",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-switch": "^1.0.3",
+    "@radix-ui/react-tooltip": "^1.0.6",
     "@stripe/stripe-js": "^1.52.1",
     "@tabler/icons-react": "^2.9.0",
+    "ai": "^2.1.26",
     "axios": "^1.3.6",
+    "class-variance-authority": "^0.7.0",
     "classnames": "^2.3.2",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
@@ -32,6 +43,7 @@
     "formkit": "^1.0.0-beta.15",
     "next": "13.1.6",
     "next-i18next": "^13.2.2",
+    "next-themes": "^0.2.1",
     "openai": "^3.2.1",
     "react": "18.2.0",
     "react-avatar": "^5.0.3",
@@ -41,15 +53,19 @@
     "react-hot-toast": "^2.4.0",
     "react-i18next": "^12.2.0",
     "react-icons": "^4.9.0",
+    "react-intersection-observer": "^9.5.2",
     "react-markdown": "^8.0.5",
     "react-query": "^3.39.3",
     "react-syntax-highlighter": "^15.5.0",
     "react-table": "^7.8.0",
+    "react-textarea-autosize": "^8.5.2",
     "react-toastify": "^9.1.3",
     "rehype-mathjax": "^4.0.2",
     "remark-gfm": "^3.0.1",
     "remark-math": "^5.1.1",
     "sharp": "^0.32.1",
+    "tailwind-merge": "^1.14.0",
+    "tailwindcss-animate": "^1.0.6",
     "use-debounce": "^9.0.4",
     "uuid": "^9.0.0"
   },
@@ -57,6 +73,7 @@
     "@mozilla/readability": "^0.4.4",
     "@tailwindcss/typography": "^0.5.9",
     "@trivago/prettier-plugin-sort-imports": "^4.1.1",
+    "@types/firebase": "^3.2.1",
     "@types/jsdom": "^21.1.1",
     "@types/node": "18.15.0",
     "@types/react": "18.0.28",
