--- a/package.json
+++ b/package.json
@@ -41,10 +41,14 @@
     "eventsource-parser": "^0.1.0",
     "firebase": "^9.17.1",
     "formkit": "^1.0.0-beta.15",
+    "langchain": "^0.0.119",
+    "multer": "^1.4.5-lts.1",
     "next": "13.1.6",
+    "next-connect": "^1.0.0-next.4",
     "next-i18next": "^13.2.2",
     "next-themes": "^0.2.1",
     "openai": "^3.2.1",
+    "pdf-parse": "^1.1.1",
     "react": "18.2.0",
     "react-avatar": "^5.0.3",
     "react-copy-to-clipboard": "^5.1.0",
@@ -85,6 +89,7 @@
     "endent": "^2.1.0",
     "gpt-3-encoder": "^1.1.4",
     "jsdom": "^21.1.1",
+    "pdfjs-dist": "^3.8.162",
     "postcss": "^8.4.21",
     "prettier": "^2.8.7",
     "prettier-plugin-tailwindcss": "^0.2.5",
