--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@tabler/icons-react": "^2.9.0",
     "ai": "^2.1.26",
     "axios": "^1.3.6",
+    "canvas": "^2.11.2",
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.3.2",
     "eslint": "8.33.0",
