--- a/package.json
+++ b/package.json
@@ -44,9 +44,11 @@
     "langchain": "^0.0.119",
     "multer": "^1.4.5-lts.1",
     "next": "13.1.6",
+    "next-connect": "^1.0.0-next.4",
     "next-i18next": "^13.2.2",
     "next-themes": "^0.2.1",
     "openai": "^3.2.1",
+    "pdf-parse": "^1.1.1",
     "react": "18.2.0",
     "react-avatar": "^5.0.3",
     "react-copy-to-clipboard": "^5.1.0",
