--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,18 +19,6 @@
       "@/*": ["./*"]
     }
   },
-  "include": [
-    "next-env.d.ts",
-    "**/*.ts",
-    "**/*.tsx",
-    "pages/_app.js",
-    "pages/prompt/[promptId].tsx",
-    "pages/prompt/createtopics.jsx",
-    "components/prompts/Header.jsx",
-    "pages/prompts.jsx",
-    "components/PDF/app/actions.ts",
-    "pages/uploader.js",
-    "components/PDF/components/prompt-form.jsx"
-  ],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "pages/_app.js", "pages/prompt/[promptId].tsx", "pages/prompt/createtopics.jsx", "components/prompts/Header.jsx", "pages/prompts.jsx", "components/PDF/app/actions.ts"],
   "exclude": ["node_modules"]
 }
