--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "next-i18next": "^13.2.2",
     "next-themes": "^0.2.1",
     "openai": "^3.2.1",
+    "pdfjs-dist": "^3.9.179",
     "react": "18.2.0",
     "react-avatar": "^5.0.3",
     "react-copy-to-clipboard": "^5.1.0",
