--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-intersection-observer": "^9.5.2",
     "react-markdown": "^8.0.5",
     "react-query": "^3.39.3",
+    "react-responsiveness": "^0.1.2",
     "react-syntax-highlighter": "^15.5.0",
     "react-table": "^7.8.0",
     "react-textarea-autosize": "^8.5.2",
