--- a/package.json
+++ b/package.json
@@ -42,10 +42,12 @@
     "eventsource-parser": "^0.1.0",
     "firebase": "^9.17.1",
     "formkit": "^1.0.0-beta.15",
+    "js-cookie": "^3.0.5",
     "langchain": "^0.0.119",
     "next": "13.1.6",
     "next-i18next": "^13.2.2",
     "next-themes": "^0.2.1",
+    "nookies": "^2.5.2",
     "openai": "^3.2.1",
     "react": "18.2.0",
     "react-avatar": "^5.0.3",
