--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@radix-ui/react-tooltip": "^1.0.6",
     "@stripe/stripe-js": "^1.52.1",
     "@tabler/icons-react": "^2.9.0",
+    "@xenova/transformers": "^2.5.2",
     "ai": "^2.1.26",
     "axios": "^1.3.6",
     "class-variance-authority": "^0.7.0",
