--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "openai": "^4.22.1",
     "react": "^18",
     "react-dom": "^18",
-    "react-markdown": "^9.0.1"
+    "react-markdown": "^9.0.1",
+    "sharp": "^0.33.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
