--- a/package.json
+++ b/package.json
@@ -6,22 +6,98 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "prettier --write .",
+    "test": "vitest",
+    "coverage": "vitest run --coverage"
   },
   "dependencies": {
-    "next": "13.1.6",
+    "next": "14",
     "openai": "^4.22.1",
     "react": "^18",
     "react-dom": "^18",
     "react-markdown": "^9.0.1",
-    "sharp": "^0.33.0"
+    "react-toastify": "^9.1.3",
+    "sharp": "^0.33.0",
+    "@chakra-ui/react": "^2.6.1",
+    "@dqbd/tiktoken": "^1.0.2",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@formkit/auto-animate": "^1.0.0-beta.6",
+    "@heroicons/react": "^1.0.6",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.12.0",
+    "@paypal/react-paypal-js": "^7.8.2",
+    "@radix-ui/react-alert-dialog": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.4",
+    "@radix-ui/react-dropdown-menu": "^2.0.5",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-select": "^1.2.2",
+    "@radix-ui/react-separator": "^1.0.3",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-switch": "^1.0.3",
+    "@radix-ui/react-tooltip": "^1.0.6",
+    "@stripe/stripe-js": "^1.52.1",
+    "@tabler/icons-react": "^2.9.0",
+    "@xenova/transformers": "^2.5.2",
+    "ai": "^2.1.26",
+    "axios": "^1.3.6",
+    "class-variance-authority": "^0.7.0",
+    "classnames": "^2.3.2",
+    "eslint": "8.33.0",
+    "eslint-config-next": "13.1.6",
+    "eventsource-parser": "^0.1.0",
+    "firebase": "^9.17.1",
+    "formkit": "^1.0.0-beta.15",
+    "js-cookie": "^3.0.5",
+    "langchain": "^0.0.119",
+    "next-i18next": "^13.2.2",
+    "next-themes": "^0.2.1",
+    "nookies": "^2.5.2",
+    "react-avatar": "^5.0.3",
+    "react-copy-to-clipboard": "^5.1.0",
+    "react-firebase-hooks": "^5.1.1",
+    "react-hot-toast": "^2.4.0",
+    "react-i18next": "^12.2.0",
+    "react-icons": "^4.9.0",
+    "react-intersection-observer": "^9.5.2",
+    "react-query": "^3.39.3",
+    "react-responsiveness": "^0.1.2",
+    "react-syntax-highlighter": "^15.5.0",
+    "react-table": "^7.8.0",
+    "react-textarea-autosize": "^8.5.2",
+    "rehype-mathjax": "^4.0.2",
+    "remark-gfm": "^3.0.1",
+    "remark-math": "^5.1.1",
+    "tailwind-merge": "^1.14.0",
+    "tailwindcss-animate": "^1.0.6",
+    "use-debounce": "^9.0.4",
+    "uuid": "^9.0.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
+    "@mozilla/readability": "^0.4.4",
+    "@tailwindcss/typography": "^0.5.9",
+    "@trivago/prettier-plugin-sort-imports": "^4.1.1",
+    "@types/firebase": "^3.2.1",
     "babel-eslint": "^10.1.0",
+    "@types/jsdom": "^21.1.1",
+    "@types/node": "18.15.0",
+    "@types/react": "18.0.28",
+    "@types/react-dom": "18.0.11",
+    "@types/react-syntax-highlighter": "^15.5.6",
+    "@types/uuid": "^9.0.1",
+    "@vitest/coverage-c8": "^0.29.7",
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0"
+    "jsdom": "^21.1.1",
+    "endent": "^2.1.0",
+    "gpt-3-encoder": "^1.1.4",
+    "prettier": "^2.8.7",
+    "prettier-plugin-tailwindcss": "^0.2.5",
+    "tailwindcss": "^3.3.0",
+    "vitest": "^0.29.7"
   }
 }
